--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon backend/index.js",
-    "heroku-postbuild": "cd frontend && npm intsall && npm run build"
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "author": "Bhavya Kumar Makwana",
   "license": "ISC",
